# privacy-filter.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
bench/: banded_attn_proto.cpp  pf-bench.cpp
demo/wasm/: .gitignore  README.md  build.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
demo/wasm/src/: main.ts  worker.ts
docs/: cpu-perf.md
fuzz/: fuzz_gguf.cpp  fuzz_tokenizer.cpp
include/: pf.h
model-cards/: privacy-filter-multilingual.md  privacy-filter.md
scripts/: compare_taps.py  convert.py  gen_unicode.py  hf_dump.py  publish_hf.py  requirements.txt
src/: backend.cpp  backend.h  gguf_loader.cpp  gguf_loader.h  model.cpp  model.h  pf.cpp
tests/: CMakeLists.txt  test_graph_blocks.cpp  test_loader.cpp  test_parity.cpp  test_window_stitch.cpp
tests/fixtures/fuzz/: gguf-blck0-type-fpe  gguf-empty-key  gguf-zero-dim-fpe
tools/: pf-cli.cpp  pf-web.cpp
